# sfa

./: .codespellrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust-lint.yml
src/: lib.rs  main.rs
